unpackaged/main/default/objects/Zip_Code_Details__mdt/Zip_Code_Details__mdt.object-meta.xml
<CustomObject>
    <label>Zip Code Details</label>
    <pluralLabel>Zip Code Details</pluralLabel>
</CustomObject>