unpackaged/main/default/objects/Zip_Code_Details__mdt/fields/Club_Code__c.field-meta.xml
<CustomField>
    <fullName>Club_Code__c</fullName>
    <label>Club Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>