unpackaged/main/default/objects/Zip_Code_Details__mdt/fields/End_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>End_Zip_Code__c</fullName>
    <label>End Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>