unpackaged/main/default/objects/Zip_Code_Details__mdt/fields/Start_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Start_Zip_Code__c</fullName>
    <label>Start Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>